more MQs for staff page

--- a/staff.html
+++ b/staff.html
@@ -175,27 +175,57 @@
                             <tr>
                                 <td>Suzanne Benton</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:suzanne@parkwaypreschool.com">suzanne@parkwaypreschool.com</a></td>
+                                <td>
+                                    <a href="mailto:suzanne@parkwaypreschool.com">
+                                        <svg class="staff__teachers-icon">
+                                            <use xlink:href="img/sprite.svg#icon-envelop" />
+                                        </svg>
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Julie Currie</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:julie@parkwaypreschool.com">julie@parkwaypreschool.com</a></td>
+                                <td>
+                                   <a href="mailto:julie@parkwaypreschool.com">
+                                       <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Ginny Green</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:ginny@parkwaypreschool.com">ginny@parkwaypreschool.com</a></td>
+                                <td>
+                                    <a href="mailto:ginny@parkwaypreschool.com">
+                                        <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Gill Jennings</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:gill@parkwaypreschool.com">gill@parkwaypreschool.com</a></td>
+                                <td>
+                                <a href="mailto:gill@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                       <use xlink:href="img/sprite.svg#icon-envelop" />
+                                   </svg>
+                                </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Laura Naile</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:laura@parkwaypreschool.com">laura@parkwaypreschool.com</a></td>
+                                <td>
+                                <a href="mailto:laura@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                        <use xlink:href="img/sprite.svg#icon-envelop" />
+                                    </svg>
+                                </a>
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -209,42 +239,74 @@
                             <tr>
                                 <td>Haley Barnett</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:haley@parkwaypreschool.com">haley@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:haley@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Shani Cobb</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:shani@parkwaypreschool.com">shani@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:shani@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Stacey Corcimiglia</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:stacey@parkwaypreschool.com">stacey@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:stacey@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Sara Creager</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:sara@parkwaypreschool.com">sara@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:sara@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Charla Liedahl</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:charla@parkwaypreschool.com">charla@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:charla@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Andrea McCoy</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:andrea@parkwaypreschool.com">andrea@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:andrea@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Carrie Grimes</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:carrie@parkwaypreschool.com">carrie@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:carrie@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Jennifer Ware</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:jenniferw@parkwaypreschool.com">jenniferw@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:jenniferw@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                         </table>
                     </div>
@@ -258,42 +320,74 @@
                             <tr>
                                 <td>Jennifer Coffey</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:jennifer@parkwaypreschool.com">jennifer@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:jennifer@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Regina Ennis</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:regina@parkwaypreschool.com">regina@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:regina@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Marcie Jurney</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:marcie@parkwaypreschool.com">marcie@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:marcie@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Amy Maples</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:amy@parkwaypreschool.com">amy@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:amy@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Nancy McNeill</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:nancy@parkwaypreschool.com">nancy@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:nancy@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Shay Ragsdale</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:shay@parkwaypreschool.com">shay@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:shay@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Cindy Schival</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:cindy@parkwaypreschool.com">cindy@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:cindy@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Beth Sygman</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:beth@parkwaypreschool.com">beth@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:beth@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                         </table>
                     </div>
@@ -307,22 +401,38 @@
                             <tr>
                                 <td>Kitty Atmore</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:kitty@parkwaypreschool.com">kitty@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:kitty@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Kerri Davis</td>
                                 <td>Lead Teacher</td>
-                                <td><a href="mailto:kerri@parkwaypreschool.com">kerri@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:kerri@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Bridgitt Norton</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:bridgitt@parkwaypreschool.com">bridgitt@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:bridgitt@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Lindsay Striplin</td>
                                 <td>Assistant Teacher</td>
-                                <td><a href="mailto:lindsay@parkwaypreschool.com">lindsay@parkwaypreschool.com</a></td>
+                                <td><a href="mailto:lindsay@parkwaypreschool.com">
+                                    <svg class="staff__teachers-icon">
+                                           <use xlink:href="img/sprite.svg#icon-envelop" />
+                                       </svg>
+                                </a></td>
                             </tr>
                         </table>
                     </div>
