--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="home">
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8"> 
@@ -15,7 +15,7 @@
 
 <body class="Home">
   
-    <header class="header">
+    <header class="header" id="home">
        
         <div class="header__top-sect">
             <div class="header__top-sect-container">
