id on body works ok but not all the way to top - trying on html element

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8"> 
@@ -13,7 +13,7 @@
     <title>Parkway Preschool</title>
 </head>
 
-<body class="Home" id="home">
+<body class="Home">
   
     <header class="header">
        
