updated target for btt btn on all remaining pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home">
 <head>
     <title>About Us - Parkway Preschool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -291,7 +291,7 @@
         <p class="footer__design">website design by <a href="https://jasonduquain.me" target="_blank" class="footer__me" rel="noopener">Jason Duquain</a> 
     </div>
     
-    <a class="js-btt-btn" href="#AboutUs">
+    <a class="js-btt-btn" href="#home">
         <svg class="js-btt-btn-icon">
             <use xlink:href="img/sprite.svg#icon-arrow-up2" />
         </svg>
