--- a/curriculum.html
+++ b/curriculum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home">
 <head>
     <title>Curriculum - Parkway Preschool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
