swapped out some imgs

--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
     
     <section class="gallery fullwidth">
         <div class="gallery__image-wrap">
-            <img src="img/school-room.jpg" alt="" class="gallery__image"></div>
+            <img src="img/armor.jpg" alt="" class="gallery__image"></div>
         <div class="gallery__image-wrap gallery__image-wrap--order">
             <img src="img/gallery-image-2.jpg" alt="" class="gallery__image">
             </div>
         <div class="gallery__image-wrap">
-            <img src="img/playground.jpg" alt="" class="gallery__image"></div>
+            <img src="img/playground-3.jpg" alt="" class="gallery__image"></div>
         <div class="gallery__image-wrap">
             <img src="img/gallery-image-4.jpg" alt="" class="gallery__image"></div>
     </section>
