--- a/curriculum.html
+++ b/curriculum.html
@@ -232,7 +232,7 @@
                 </div>
                 
                 <div class="curriculum__sect curriculum__sect--reverse">
-                    <img src="img/hero.jpg" alt="" class="curriculum__image">
+                    <img src="img/hero-paid.jpg" alt="" class="curriculum__image">
                     <div class="curriculum__main">
                         <div class="curriculum__top curriculum__top--orange">
                             <h3 class="curriculum__heading">Young Fives Classes</h3>
