working on svg text clip path

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="cards__wrap">
                 <div class="cards__image-wrap">
-                    <img src="img/card-370x265.jpg" alt="" class="cards__image">
+                    <img src="img/kids-drawing.jpg" alt="" class="cards__image">
                     <div class="cards__wave"></div> 
                 </div>
                 <div class="cards__content">
@@ -170,7 +170,7 @@
         <div class="gallery__image-wrap">
             <img src="img/armor.jpg" alt="" class="gallery__image"></div>
         <div class="gallery__image-wrap gallery__image-wrap--order">
-            <img src="img/gallery-image-2.jpg" alt="" class="gallery__image">
+            <img src="img/arms--crop.jpg" alt="" class="gallery__image">
             </div>
         <div class="gallery__image-wrap">
             <img src="img/playground-3.jpg" alt="" class="gallery__image"></div>
