swapped imgs and removed js code and jquery file

--- a/aboutus.html
+++ b/aboutus.html
@@ -111,7 +111,7 @@
                 </clipPath>
               </defs>
               
-              <image xlink:href="img/ughh.jpg" x="0" y="0" width="100%" height="100%" class="aboutus__image-svg"/>
+              <image xlink:href="img/chalkboard--crop.jpg" x="0" y="0" width="100%" height="100%" class="aboutus__image-svg"/>
           </svg>
            <!--<img src="img/chalkboard--blue.jpg" alt="bluish colored chalkboard" class="aboutus__image-svg">-->
            
