--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="cards__grid">
             <div class="cards__wrap">
                 <div class="cards__image-wrap">
-                    <img src="img/school-room.jpg" alt="" class="cards__image">
+                    <img src="img/school-room--small.jpg" alt="" class="cards__image">
                     <div class="cards__wave"></div> 
                 </div>
                 <div class="cards__content">
