fixes for cal width at mobile

--- a/calendar.html
+++ b/calendar.html
@@ -65,7 +65,7 @@
               end: '2019-11-05'
             },
             {
-              title: 'In honor of veterans day wear red, white, and blue',
+              title: 'Veterans Day (wear red, white, and blue)',
               start: '2019-11-11'
             },
             {
