--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
 
     <section class="current-cal">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="current-cal--svg" viewBox="0 0 188 20">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="current-cal--svg" viewBox="0 0 380 50">
               <defs>
                  <linearGradient id="myGradient">
                   <stop offset="5%"  stop-color="hsl(200, 99%, 40%)" />
@@ -171,29 +171,22 @@
                 </linearGradient>
                 
               </defs>
-              <text x="50%" y="15" class="current-cal--text" fill="url('#myGradient')">
+              <text x="50%" y="40" class="current-cal--text" fill="url('#myGradient')">
                   Mark Your Calendar!     
               </text>
           </svg>
           <ul class="current-cal--list">
               <li class="current-cal--item">
-                  <svg class="contact-icon">
-                      <use xlink:href="img/sprite.svg#icon-calendar" />
-                  </svg>
+                  <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
                   November 11: <span class="current-cal--span">Veterans Day (wear red, white, and blue)</span>
               </li>
               <li class="current-cal--item">
-                  <svg class="contact-icon">
-                      <use xlink:href="img/sprite.svg#icon-calendar" />
-                  </svg>
-                 November 21&ndash;22: <span class="current-cal--span">Thanksgiving Feasts (11:00AM)</span>
+                  <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
+                  November 21&ndash;22: <span class="current-cal--span">Thanksgiving Feasts (11:00am)</span>
                   </li>
               <li class="current-cal--item">
-                  <!--<svg class="contact-icon">
-                      <use xlink:href="img/sprite.svg#icon-calendar" />
-                  </svg>-->
-                  <img src="img/aqua-circle-bubble.png" width="14" alt="">
-                  November 25&ndash;29: <span class="current-cal--span">Thanksgiving Break (NO SCHOOL)</span>
+                  <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
+                  November 25&ndash;29: <span class="current-cal--span">Thanksgiving Break (No School)</span>
               </li>
           </ul>
     </section>
