fix for safari making phone nums blue

--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,8 @@
    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <meta name="description" content="Parkway Presbyterian Preschool and Kindergarten is a private Christian preschool founded in 1999 and currently serves 175 children ages 2 years through 5 years. The program is accredited by the North Georgia Preschool Association and is recognized as a School of Excellence. Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents."> 
+    <meta name="description" content="Parkway Presbyterian Preschool and Kindergarten is a private Christian preschool founded in 1999 and currently serves 175 children ages 2 years through 5 years. The program is accredited by the North Georgia Preschool Association and is recognized as a School of Excellence. Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents.">
+    <meta name="format-detection" content="telephone=no"> 
     
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900|Grand+Hotel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -126,7 +127,7 @@
                  <ul class="contact-list list-one">
                      <li class="contact-item">5830 Bethelview Road</li>
                      <li class="contact-item">Cumming, GA 30040</li>
-                     <li class="contact-item">1-678-513-3909</li>
+                     <li class="contact-item contact-item--gray">1-678-513-3909</li>
                  </ul>
                </div>
               
