hero text animate and font size

--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
     <div class="hero hero--overflow" id="hdr">
         <div class="hero__wrap">
            <div class="hero__center">
-                <h1 class="hero__heading" style="letter-spacing: 2px;">Welcome</h1>
-                <h2 class="hero__subheading">to Parkway<span class="hero__subheading--span"> Preschool</span></h2>
-                <a href="#" class="btn">Helping parents choose, preparing children to learn.</a>
+                <h1 class="hero__heading">Welcome</h1>
+                <h2 class="hero__subheading">
+                    <span class="hero__span">to</span> 
+                    <span class="hero__subheading--span"> Parkway</span>
+                    Preschool
+                </h2>
                 
            </div> 
            <div class="brush"></div> 
@@ -124,8 +127,8 @@
                     <div class="cards__icon-wrap">
                         <i class="flaticon-balloons cards__icon"></i>       
                     </div>
-                    <p class="cards__summary">Check out our calender to see upcoming events, holidays, and other activites during the 2019-2020 school year.</p>
-                    <a href="calendar.html" class=" cards__btn btn" style="margin-bottom: 1.5em">More info</a>
+                    <p class="cards__summary">Check out our calendar to see upcoming events, holidays, and other activites during the 2019-2020 school year.</p>
+                    <a href="calendar.html" class=" cards__btn btn" style="margin-bottom: 1.5em">Calendar</a>
                 </div>
             </div>
             <div class="cards__wrap">
@@ -139,7 +142,7 @@
                        <i class="flaticon-kindergarten cards__icon" style="font-size: 105%"></i>     
                     </div>
                     <p class="cards__summary">Learn more about Parkway Presbyterian Preschool and Kindergarten, including our mission, our facilities, your child&apos;s experience, where we are located, our families and more.</p>
-                    <a href="aboutus.html" class=" cards__btn btn" style="margin-bottom: 1.5em">More info</a>
+                    <a href="aboutus.html" class=" cards__btn btn" style="margin-bottom: 1.5em">About Us</a>
                 </div>
             </div>
             <div class="cards__wrap">
@@ -152,8 +155,8 @@
                     <div class="cards__icon-wrap">
                         <i class="flaticon-pencils cards__icon"></i>     
                     </div>
-                    <p class="cards__summary">Visit Parkway’s online library of forms. We also have a few documents with helpful information and registration information.</p>
-                    <a href="forms.html" class=" cards__btn btn" style="margin-bottom: 1.5em">More info</a>
+                    <p class="cards__summary">Visit Parkway’s online library of forms. We have documents with helpful information and registration information.</p>
+                    <a href="forms.html" class=" cards__btn btn" style="margin-bottom: 1.5em">Forms</a>
                 </div>
             </div>
         </div>
@@ -163,17 +166,18 @@
     </section>
 
     <section class="current-cal">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="current-cal--svg" viewBox="0 0 380 50">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="current-cal--svg" viewBox="0 0 400 50">
               <defs>
                  <linearGradient id="myGradient">
                   <stop offset="5%"  stop-color="hsl(200, 99%, 40%)" />
                   <stop offset="30%" stop-color="hsl(219, 70%, 35%)" />
+                  <stop offset="70%" stop-color="hsl(219, 70%, 35%)" />
                   <stop offset="100%"  stop-color="hsl(200, 99%, 40%)" />
                 </linearGradient>
                 
               </defs>
               <text x="50%" y="40" class="current-cal--text" fill="url('#myGradient')">
-                  Mark Your Calendar!     
+                  Mark Your Calendars!     
               </text>
           </svg>
           <ul class="current-cal--list">
