--- a/calendar.html
+++ b/calendar.html
@@ -366,7 +366,7 @@
 
                     <p class="footer__closings">
                         Please check the <a href="https://www.forsyth.k12.ga.us/forsyth" class="footer__closings-link" target="_blank" rel="noopener">Forsyth County School Closings/Calendar</a>
-                        during inclement weather
+                        during inclement weather.
                     </p>
                 </div>
                 <div class="footer__contact">
@@ -414,7 +414,7 @@
     </footer>
     <div class="footer__bottom">
         <p class="footer__copyright">
-            Copyright &copy; <span class="year">2018</span> Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
+            Copyright &copy; <span class="year">2018</span> Parkway Presbyterian Preschool and Kindergarten. All rights reserved. 
         </p>
         <p class="footer__design">website design by <a href="https://jasonduquain.me" target="_blank" class="footer__me">Jason Duquain</a> 
     </div>
