--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="home">
 <head>
-    <title>About Us - Parkway Preschool</title>
+    <title>About Us - Parkway Preschool and Kindergarten</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
     <meta name="description" content="Parkway Presbyterian Preschool and Kindergarten is a private Christian preschool founded in 1999 and currently serves 175 children ages 2 years through 5 years. The program is accredited by the North Georgia Preschool Association and is recognized as a School of Excellence. Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents."> 
@@ -88,7 +88,7 @@
     
     <div class="hero">
         <div class="hero__wrap hero__wrap--two">
-            
+            <h1 class="hero__hdg">About Us</h1>
            <div class="brush"></div> 
         </div>
     </div>
@@ -240,7 +240,7 @@
 
                     <p class="footer__closings">
                         Please check the <a href="https://www.forsyth.k12.ga.us/forsyth" class="footer__closings-link" target="_blank" rel="noopener">Forsyth County School Closings/Calendar</a>
-                        during inclement weather
+                        during inclement weather.
                     </p>
                 </div>
                 <div class="footer__contact">
@@ -288,7 +288,7 @@
     </footer>
     <div class="footer__bottom">
         <p class="footer__copyright">
-            Copyright &copy; <span class="year">2018</span> Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
+            Copyright &copy; <span class="year">2018</span> Parkway Presbyterian Preschool and Kindergarten. All rights reserved. 
         </p>
         <p class="footer__design">website design by <a href="https://jasonduquain.me" target="_blank" class="footer__me" rel="noopener">Jason Duquain</a> 
     </div>
