made Ericas changes

--- a/program.html
+++ b/program.html
@@ -116,7 +116,7 @@
          <div class="program__split-cell program__split--two">
             
             <div class="program__split program__split-cell--three">
-                <img src="img/hero-program.jpg" alt="">
+                <img src="img/lunch-bunch-1280.jpg" alt="">
             </div>
             <div class="program__split program__split-cell--four">
                 <div class="program__translate program__translate--two">
