--- a/calendar.html
+++ b/calendar.html
@@ -413,6 +413,8 @@
         </svg>
     </a>
 
+   <script src="js/svg4everybody.min.js"></script>
+    <script>svg4everybody(); </script>
     <script src="js/script.js"></script>
     
     
