--- a/contactus.html
+++ b/contactus.html
@@ -310,7 +310,8 @@
         </svg>
     </a>
     
-    
+    <script src="js/svg4everybody.min.js"></script>
+    <script>svg4everybody(); </script>
     <script src="https://kwes.io/js/kwes.js"></script>
     <script src="js/script.js"></script>
 </body>
