--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
         </svg>
     </a>
     
-    
+    <script src="js/svg4everybody.min.js"></script>
+    <script>svg4everybody(); </script>
     <script src="js/TweenMax.min.js"></script>
     <script src="js/SplitText.min.js"></script>
     <script src="js/script.js"></script>
