--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="cards__content">
                     <h3 class="cards__subheading cards__subheading-brush cards__subheading-brush--2">Experience <span class="cards__subheading-brush-span--1">Parkway</span></h3>
                     <div class="cards__icon-wrap">
-                       <i class="flaticon-kindergarten cards__icon" style="font-size: 105%"></i>     
+                       <i class="flaticon-kindergarten cards__icon"></i>     
                     </div>
                     <p class="cards__summary">Learn more about Parkway Presbyterian Preschool and Kindergarten, including our mission, our facilities, your child&apos;s experience, where we are located, our families and more.</p>
                     <a href="aboutus.html" class=" cards__btn btn" style="margin-bottom: 1.5em">About Us</a>
@@ -192,18 +192,6 @@
               <p class="current-cal--para">School Tours will be held on January 13th and 14th at 1:15pm. Please call the Preschool Office at <a href="tel:1-678-513-3909" style="color: inherit">1-678-513-3909</a> during the month of January to RSVP.</p> 
 
           </li>
-          <!--<li class="current-cal--item">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              November 11: <span class="current-cal--span">Veterans Day (wear red, white, and blue)</span>
-          </li>
-          <li class="current-cal--item">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              November 21&ndash;22: <span class="current-cal--span">Thanksgiving Feasts (11:00am)</span>
-              </li>
-          <li class="current-cal--item">
-              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              November 25&ndash;29: <span class="current-cal--span">Thanksgiving Break (No School)</span>
-          </li>-->
        </ul>
     </section>
     
