--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="sect-heading-img"></div>
         
         <p class="cards__about">
-            Parkway Presbyterian Preschool and Kindergarten, a private Christian preschool founded in 1999, currently serves 175 children ages 2 years through 5 years. The program is accredited by the <a class="aboutus__link" href="https://www.ngumc.org/preschoolassociation" target="_blank" rel="noopener">North Georgia Preschool Association</a> and is recognized as a School of Excellence. <br><br>
+            Parkway Presbyterian Preschool and Kindergarten, a private Christian preschool founded in 1999, currently serves 175 children ages 2 years through 5 years. Our preschool is a ministry of <a class="aboutus__link" href="https://www.parkway-church.org" target="_blank" rel="noopener">Parkway Church, EPC</a>. The program is accredited by the <a class="aboutus__link" href="https://www.ngumc.org/preschoolassociation" target="_blank" rel="noopener">North Georgia Preschool Association</a> and is recognized as a School of Excellence. <br><br>
             Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents.
         </p>
         
