IE11 grid fixes

--- a/program.html
+++ b/program.html
@@ -130,7 +130,7 @@
        
        <div class="program__wrap">
           
-          <h3 class="line__subhdg">Registration</h3>
+          <h3 class="line__subhdg"><span class="ie">Registration</span></h3>
           <div class="program__sect program__sect-flex">
              <div class="program__para-wrap">
                  <p class="program__para">
@@ -171,7 +171,7 @@
                   </table>
               </div>
           </div>
-          <h3 class="line__subhdg">Activities</h3>
+          <h3 class="line__subhdg"><span class="ie">Activities</span></h3>
           <div class="program__sect program__sect-flex program__sect-flex--reverse">
              <div class="program__para-wrap">
                  <p class="program__para program__para--reverse">
@@ -203,7 +203,7 @@
                   </table>
               </div>
           </div>
-          <h3 class="line__subhdg">Snacks</h3>
+          <h3 class="line__subhdg"><span class="ie">Snacks</span></h3>
           <div class="program__sect program__sect-flex">
              <div class="program__para-wrap">
                  <p class="program__para">
