--- a/forms.html
+++ b/forms.html
@@ -105,15 +105,15 @@
             
             <div class="forms__grid">
                 <div class="forms__wrap">
-                    <a href="/docs/2019-2020%20Registration%20Form.pdf" class="forms__link">
+                    <a href="/docs/Registration%20Form%202020-2021.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
                     <p class="forms__item">
-                        <a href="/docs/2019-2020%20Registration%20Form.pdf" class="forms__link">
-                            2019-2020 Registration Form
+                        <a href="/docs/Registration%20Form%202020-2021.pdf" class="forms__link">
+                            2020-2021 Registration Form
                         </a>
                     </p>
-                    <p class="forms__info">Adobe Acrobat file, 571 KB</p>   
+                    <p class="forms__info">Adobe Acrobat file, 141 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/Authorization%20to%20Administer%20Medication.pdf" class="forms__link">
