--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         <h2 class="cards__heading sect-heading">Our School</h2>
         <div class="sect-heading-img"></div>
         
+        <p class="registration">The 2020-2021 registration form is now available. Please visit <a class="aboutus__link" href="/forms.html">the forms page</a> to download.</p>
+        
         <p class="cards__about">
             Parkway Presbyterian Preschool and Kindergarten, a private Christian preschool founded in 1999, currently serves 175 children ages 2 years through 5 years. Our preschool is a ministry of <a class="aboutus__link" href="https://www.parkway-church.org" target="_blank" rel="noopener">Parkway Church, EPC</a>. The program is accredited by the <a class="aboutus__link" href="https://www.ngumc.org/preschoolassociation" target="_blank" rel="noopener">North Georgia Preschool Association</a> and is recognized as a School of Excellence. <br><br>
             Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents.
