added preconnect for fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Parkway Presbyterian Preschool and Kindergarten is a private Christian preschool founded in 1999 and currently serves 175 children ages 2 years through 5 years. The program is accredited by the North Georgia Preschool Association and is recognized as a School of Excellence. Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents."> 
     <meta name="format-detection" content="telephone=no"> 
     
+	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700|Bubblegum+Sans&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/styles.css">
