--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
+	
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <!--<link rel="icon" href="/favicon.ico" type="image/x-icon">-->
    
     <title>Parkway Preschool</title>
 </head>
