--- a/index.html
+++ b/index.html
@@ -193,11 +193,16 @@
           <ul class="current-cal--list">
          <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">Registration for 2020-2021 School Year will begin Tuesday, January 21st at 9am.</p>
+              <p class="current-cal--para">April 6-10: Spring Break - No School</p>
           </li>
           <li class="current-cal--item current-cal--item--flex">
               <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
-              <p class="current-cal--para">School Tours will be held on January 13th and 14th at 1:15pm. Please call the Preschool Office at <a href="tel:1-678-513-3909" style="color: inherit">1-678-513-3909</a> during the month of January to RSVP.</p> 
+              <p class="current-cal--para">May 12 &amp; 13: 2's and 3's End of Year Program and Last Day at 10:30 am</p> 
+
+          </li>
+          <li class="current-cal--item current-cal--item--flex">
+              <img src="img/aqua-circle-bubble.png" alt="" class="current-cal--img">
+              <p class="current-cal--para">May 14: 4's and Young 5's End of Year Program and Graduation at 10:30 am</p> 
 
           </li>
        </ul>
