coronavirus and fb update

--- a/contactus.html
+++ b/contactus.html
@@ -289,7 +289,7 @@
         </div>
         <div class="footer__shape">
             <div class="footer__icon-wrap">
-                <a href="https://m.facebook.com/groups/370838632933125?tsid=0.17988193374913042&source=result" class="footer__anch" target="_blank" rel="noopener">
+                <a href="https://facebook.com/parkwaypresbyterianpreschool/" class="footer__anch" target="_blank" rel="noopener">
                     <svg class="footer__icon">
                         <use xlink:href="img/sprite.svg#icon-facebook" />
                     </svg>
